--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.39.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
